[package]
name = "intercept"
version = "0.1.1"
edition = "2018"
description = "An LD_PRELOAD library that helps averting execution of undesired programs"
license = "MIT"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctor = "^0.1"
serde = {version = "^1", features = ["derive"]}
serde_yaml = "^0.8"
